# CollaDF

./: .gitignore  CMakeLists.txt  Makefile  README.md  setup.py  temp.csv  test_dataframe
benchmarks/: benchmark.cpp  benchmark.py  benchmark_colladf  benchmark_colladf.py  benchmark_pandas.py  generate_data.py
include/colladf/: Column.hpp  DataFrame.hpp  GroupBy.hpp  Reader.hpp
src/: DataFrame.cpp  GroupBy.cpp  Reader.cpp  pybind_wrapper.cpp
tests/: test_dataframe.cpp  test_math.cpp
